--- a/package.json
+++ b/package.json
@@ -18,13 +18,10 @@
   },
   "homepage": "https://github.com/jankern/condulence-webapp#readme",
   "dependencies": {
-    "chocolat": "^1.0.0",
     "jquery": "^3.4.1",
     "masonry-layout": "^4.2.2",
     "material-design-icons": "^3.0.1",
-    "materialize-css": "^1.0.0",
-    "photoswipe": "^4.1.3",
-    "venobox": "^1.8.9"
+    "materialize-css": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.7.2",
